--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,7 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+TrafficLightsSolution/TrafficLightsLib/obj/
+
+TrafficLightsSolution/TrafficLightsLib.Tests/obj/
