--- a/TrafficLightsSolution/TrafficLightsLib.Tests/TrafficLightsLib.Tests.csproj
+++ b/TrafficLightsSolution/TrafficLightsLib.Tests/TrafficLightsLib.Tests.csproj
@@ -53,6 +53,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="IntervalLib">
+      <Version>1.0.0</Version>
+    </PackageReference>
     <PackageReference Include="NUnit">
       <Version>3.13.2</Version>
     </PackageReference>
