--- a/TrafficLightsSolution/TrafficLightsLib/TrafficLightsLib.csproj
+++ b/TrafficLightsSolution/TrafficLightsLib/TrafficLightsLib.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="TrafficLight.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrafficLightBuilder.cs" />
     <Compile Include="TrafficLightStatus.cs" />
   </ItemGroup>
   <ItemGroup>
